aiqlParser.py
# Generated from aiql.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class aiqlParser ( Parser ):

    grammarFileName = "aiql.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'anomaly'", "'('", "')'", "'from'", "'to'", 
                     "'!'", "'not'", "'in'", "','", "'as'", "'['", "']'", 
                     "'.'", "'before'", "'after'", "'within'", "'with'", 
                     "'proc'", "'conn'", "'&&'", "'||'", "'ret'", "'count'", 
                     "'distinct'", "'group by'", "'having'", "'sort by'", 
                     "'asc'", "'desc'", "'top'", "'forward'", "'backward'", 
                     "':'", "'->'", "'<-'", "'null'", "'<'", "'>'", "'='", 
                     "'<='", "'=>'", "'sum'", "'avg'", "'execute'", "'fail'", 
                     "'priv'", "'explicit'", "'shutdown'", "'connect'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "INT", "STRING", "WS" ]

    RULE_aiql = 0
    RULE_multievent = 1
    RULE_dependency = 2
    RULE_anomaly = 3
    RULE_global_cstr = 4
    RULE_twind = 5
    RULE_cstr = 6
    RULE_attr_cstr = 7
    RULE_evt_patt = 8
    RULE_evt = 9
    RULE_rel = 10
    RULE_attr_rel = 11
    RULE_temp_rel = 12
    RULE_evt_rel = 13
    RULE_entity = 14
    RULE_entity_type = 15
    RULE_op_exp = 16
    RULE_ret = 17
    RULE_res = 18
    RULE_group_by = 19
    RULE_ret_filter = 20
    RULE_m_query = 21
    RULE_d_query = 22
    RULE_op_edge = 23
    RULE_evt_id = 24
    RULE_rename_id = 25
    RULE_datetime = 26
    RULE_attr = 27
    RULE_val = 28
    RULE_op = 29
    RULE_agg_func = 30
    RULE_keyword = 31

    ruleNames =  [ "aiql", "multievent", "dependency", "anomaly", "global_cstr", 
                   "twind", "cstr", "attr_cstr", "evt_patt", "evt", "rel", 
                   "attr_rel", "temp_rel", "evt_rel", "entity", "entity_type", 
                   "op_exp", "ret", "res", "group_by", "ret_filter", "m_query", 
                   "d_query", "op_edge", "evt_id", "rename_id", "datetime", 
                   "attr", "val", "op", "agg_func", "keyword" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    INT=50
    STRING=51
    WS=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class AiqlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multievent(self):
            return self.getTypedRuleContext(aiqlParser.MultieventContext,0)


        def dependency(self):
            return self.getTypedRuleContext(aiqlParser.DependencyContext,0)


        def anomaly(self):
            return self.getTypedRuleContext(aiqlParser.AnomalyContext,0)


        def getRuleIndex(self):
            return aiqlParser.RULE_aiql

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAiql" ):
                listener.enterAiql(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAiql" ):
                listener.exitAiql(self)




    def aiql(self):

        localctx = aiqlParser.AiqlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_aiql)
        try:
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.multievent()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.dependency()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 66
                self.anomaly()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultieventContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def global_cstr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(aiqlParser.Global_cstrContext)
            else:
                return self.getTypedRuleContext(aiqlParser.Global_cstrContext,i)


        def m_query(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(aiqlParser.M_queryContext)
            else:
                return self.getTypedRuleContext(aiqlParser.M_queryContext,i)


        def getRuleIndex(self):
            return aiqlParser.RULE_multievent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultievent" ):
                listener.enterMultievent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultievent" ):
                listener.exitMultievent(self)




    def multievent(self):

        localctx = aiqlParser.MultieventContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_multievent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << aiqlParser.T__1) | (1 << aiqlParser.T__5) | (1 << aiqlParser.T__35) | (1 << aiqlParser.INT) | (1 << aiqlParser.STRING))) != 0):
                self.state = 69
                self.global_cstr()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 76 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 75
                self.m_query()
                self.state = 78 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==aiqlParser.T__17 or _la==aiqlParser.T__18):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DependencyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def d_query(self):
            return self.getTypedRuleContext(aiqlParser.D_queryContext,0)


        def global_cstr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(aiqlParser.Global_cstrContext)
            else:
                return self.getTypedRuleContext(aiqlParser.Global_cstrContext,i)


        def getRuleIndex(self):
            return aiqlParser.RULE_dependency

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDependency" ):
                listener.enterDependency(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDependency" ):
                listener.exitDependency(self)




    def dependency(self):

        localctx = aiqlParser.DependencyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_dependency)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << aiqlParser.T__1) | (1 << aiqlParser.T__5) | (1 << aiqlParser.T__35) | (1 << aiqlParser.INT) | (1 << aiqlParser.STRING))) != 0):
                self.state = 80
                self.global_cstr()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self.d_query()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AnomalyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def global_cstr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(aiqlParser.Global_cstrContext)
            else:
                return self.getTypedRuleContext(aiqlParser.Global_cstrContext,i)


        def getRuleIndex(self):
            return aiqlParser.RULE_anomaly

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnomaly" ):
                listener.enterAnomaly(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnomaly" ):
                listener.exitAnomaly(self)




    def anomaly(self):

        localctx = aiqlParser.AnomalyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_anomaly)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(aiqlParser.T__0)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << aiqlParser.T__1) | (1 << aiqlParser.T__5) | (1 << aiqlParser.T__35) | (1 << aiqlParser.INT) | (1 << aiqlParser.STRING))) != 0):
                self.state = 89
                self.global_cstr()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Global_cstrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cstr(self):
            return self.getTypedRuleContext(aiqlParser.CstrContext,0)


        def twind(self):
            return self.getTypedRuleContext(aiqlParser.TwindContext,0)


        def getRuleIndex(self):
            return aiqlParser.RULE_global_cstr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobal_cstr" ):
                listener.enterGlobal_cstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobal_cstr" ):
                listener.exitGlobal_cstr(self)




    def global_cstr(self):

        localctx = aiqlParser.Global_cstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_global_cstr)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [aiqlParser.T__5, aiqlParser.T__35, aiqlParser.INT, aiqlParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.cstr()
                pass
            elif token in [aiqlParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.match(aiqlParser.T__1)
                self.state = 97
                self.twind()
                self.state = 98
                self.match(aiqlParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TwindContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def datetime(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(aiqlParser.DatetimeContext)
            else:
                return self.getTypedRuleContext(aiqlParser.DatetimeContext,i)


        def getRuleIndex(self):
            return aiqlParser.RULE_twind

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTwind" ):
                listener.enterTwind(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTwind" ):
                listener.exitTwind(self)




    def twind(self):

        localctx = aiqlParser.TwindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_twind)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(aiqlParser.T__3)
            self.state = 103
            self.datetime()
            self.state = 104
            self.match(aiqlParser.T__4)
            self.state = 105
            self.datetime()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CstrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attr_cstr(self):
            return self.getTypedRuleContext(aiqlParser.Attr_cstrContext,0)


        def val(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(aiqlParser.ValContext)
            else:
                return self.getTypedRuleContext(aiqlParser.ValContext,i)


        def attr(self):
            return self.getTypedRuleContext(aiqlParser.AttrContext,0)


        def getRuleIndex(self):
            return aiqlParser.RULE_cstr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCstr" ):
                listener.enterCstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCstr" ):
                listener.exitCstr(self)




    def cstr(self):

        localctx = aiqlParser.CstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cstr)
        self._la = 0 # Token type
        try:
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.attr_cstr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==aiqlParser.T__5:
                    self.state = 108
                    self.match(aiqlParser.T__5)


                self.state = 111
                self.val()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.attr()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==aiqlParser.T__6:
                    self.state = 113
                    self.match(aiqlParser.T__6)


                self.state = 116
                self.match(aiqlParser.T__7)
                self.state = 117
                self.match(aiqlParser.T__1)
                self.state = 118
                self.val()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==aiqlParser.T__8:
                    self.state = 119
                    self.match(aiqlParser.T__8)
                    self.state = 120
                    self.val()
                    self.state = 125
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 126
                self.match(aiqlParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_cstrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attr(self):
            return self.getTypedRuleContext(aiqlParser.AttrContext,0)


        def op(self):
            return self.getTypedRuleContext(aiqlParser.OpContext,0)


        def val(self):
            return self.getTypedRuleContext(aiqlParser.ValContext,0)


        def getRuleIndex(self):
            return aiqlParser.RULE_attr_cstr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr_cstr" ):
                listener.enterAttr_cstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr_cstr" ):
                listener.exitAttr_cstr(self)




    def attr_cstr(self):

        localctx = aiqlParser.Attr_cstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attr_cstr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.attr()
            self.state = 131
            self.op()
            self.state = 132
            self.val()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Evt_pattContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entity(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(aiqlParser.EntityContext)
            else:
                return self.getTypedRuleContext(aiqlParser.EntityContext,i)


        def op_exp(self):
            return self.getTypedRuleContext(aiqlParser.Op_expContext,0)


        def evt(self):
            return self.getTypedRuleContext(aiqlParser.EvtContext,0)


        def twind(self):
            return self.getTypedRuleContext(aiqlParser.TwindContext,0)


        def getRuleIndex(self):
            return aiqlParser.RULE_evt_patt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvt_patt" ):
                listener.enterEvt_patt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvt_patt" ):
                listener.exitEvt_patt(self)




    def evt_patt(self):

        localctx = aiqlParser.Evt_pattContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_evt_patt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.entity()
            self.state = 135
            self.op_exp(0)
            self.state = 136
            self.entity()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==aiqlParser.T__9:
                self.state = 137
                self.evt()


            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==aiqlParser.T__1:
                self.state = 140
                self.match(aiqlParser.T__1)
                self.state = 141
                self.twind()
                self.state = 142
                self.match(aiqlParser.T__2)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EvtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def evt_id(self):
            return self.getTypedRuleContext(aiqlParser.Evt_idContext,0)


        def attr_cstr(self):
            return self.getTypedRuleContext(aiqlParser.Attr_cstrContext,0)


        def getRuleIndex(self):
            return aiqlParser.RULE_evt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvt" ):
                listener.enterEvt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvt" ):
                listener.exitEvt(self)




    def evt(self):

        localctx = aiqlParser.EvtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_evt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(aiqlParser.T__9)
            self.state = 147
            self.evt_id()
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==aiqlParser.T__10:
                self.state = 148
                self.match(aiqlParser.T__10)
                self.state = 149
                self.attr_cstr()
                self.state = 150
                self.match(aiqlParser.T__11)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attr_rel(self):
            return self.getTypedRuleContext(aiqlParser.Attr_relContext,0)


        def temp_rel(self):
            return self.getTypedRuleContext(aiqlParser.Temp_relContext,0)


        def getRuleIndex(self):
            return aiqlParser.RULE_rel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRel" ):
                listener.enterRel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRel" ):
                listener.exitRel(self)




    def rel(self):

        localctx = aiqlParser.RelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_rel)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.attr_rel()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.temp_rel()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_relContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def evt_id(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(aiqlParser.Evt_idContext)
            else:
                return self.getTypedRuleContext(aiqlParser.Evt_idContext,i)


        def attr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(aiqlParser.AttrContext)
            else:
                return self.getTypedRuleContext(aiqlParser.AttrContext,i)


        def op(self):
            return self.getTypedRuleContext(aiqlParser.OpContext,0)


        def getRuleIndex(self):
            return aiqlParser.RULE_attr_rel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr_rel" ):
                listener.enterAttr_rel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr_rel" ):
                listener.exitAttr_rel(self)




    def attr_rel(self):

        localctx = aiqlParser.Attr_relContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_attr_rel)
        try:
            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.evt_id()
                self.state = 159
                self.match(aiqlParser.T__12)
                self.state = 160
                self.attr()
                self.state = 161
                self.op()
                self.state = 162
                self.evt_id()
                self.state = 163
                self.match(aiqlParser.T__12)
                self.state = 164
                self.attr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.evt_id()
                self.state = 167
                self.op()
                self.state = 168
                self.evt_id()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Temp_relContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def evt_id(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(aiqlParser.Evt_idContext)
            else:
                return self.getTypedRuleContext(aiqlParser.Evt_idContext,i)


        def getRuleIndex(self):
            return aiqlParser.RULE_temp_rel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemp_rel" ):
                listener.enterTemp_rel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemp_rel" ):
                listener.exitTemp_rel(self)




    def temp_rel(self):

        localctx = aiqlParser.Temp_relContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_temp_rel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.evt_id()
            self.state = 173
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << aiqlParser.T__13) | (1 << aiqlParser.T__14) | (1 << aiqlParser.T__15))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 174
            self.evt_id()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Evt_relContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(aiqlParser.RelContext)
            else:
                return self.getTypedRuleContext(aiqlParser.RelContext,i)


        def getRuleIndex(self):
            return aiqlParser.RULE_evt_rel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvt_rel" ):
                listener.enterEvt_rel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvt_rel" ):
                listener.exitEvt_rel(self)




    def evt_rel(self):

        localctx = aiqlParser.Evt_relContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_evt_rel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.match(aiqlParser.T__16)
            self.state = 177
            self.rel()
            self.state = 182
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==aiqlParser.T__8:
                self.state = 178
                self.match(aiqlParser.T__8)
                self.state = 179
                self.rel()
                self.state = 184
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entity_type(self):
            return self.getTypedRuleContext(aiqlParser.Entity_typeContext,0)


        def evt_id(self):
            return self.getTypedRuleContext(aiqlParser.Evt_idContext,0)


        def attr_cstr(self):
            return self.getTypedRuleContext(aiqlParser.Attr_cstrContext,0)


        def getRuleIndex(self):
            return aiqlParser.RULE_entity

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntity" ):
                listener.enterEntity(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntity" ):
                listener.exitEntity(self)




    def entity(self):

        localctx = aiqlParser.EntityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_entity)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.entity_type()
            self.state = 187
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==aiqlParser.STRING:
                self.state = 186
                self.evt_id()


            self.state = 193
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==aiqlParser.T__10:
                self.state = 189
                self.match(aiqlParser.T__10)
                self.state = 190
                self.attr_cstr()
                self.state = 191
                self.match(aiqlParser.T__11)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Entity_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return aiqlParser.RULE_entity_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntity_type" ):
                listener.enterEntity_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntity_type" ):
                listener.exitEntity_type(self)




    def entity_type(self):
